2006-05-25  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/test/test_flavors.py:
	Make check for twisted version smaller.
	* flumotion/test/test_pb.py:
	Refactor to not give warnings on Twisted 2.2.

2006-05-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/common.py:
	  allow unnamed binaries, for our programs From The Future

2006-05-24  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/consumers/httpstreamer/resources.py:
	  Fix error in previous commit. FYA.

2006-05-24  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/consumers/httpstreamer/resources.py:
	  Limit our max-users to 1024 - reserve_fds on python 2.4.3, due to a
	  bug in that version.

2006-05-24  Andy Wingo  <wingo@pobox.com>

	* flumotion/admin/multi.py
	(MultiAdminModel.addManager.disconnected_cb): Keep the managerId
	-> admin mapping around a little bit longer.

2006-05-23  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/configure/configure.py:
	* flumotion/configure/installed.py.in:
	* flumotion/configure/uninstalled.py.in:
	  add "daemondir", which is where daemonized programs will run from
	  core dumps will thus end up there if requested
	* flumotion/common/common.py:
	  add an argument to daemonize for the run directory
	* flumotion/manager/main.py:
	* flumotion/worker/main.py:
	  add a --daemonize-to option, only allowed when -D/--daemonize is
	  used
	* flumotion/service/service.py:
	  use the new --daemonize-to option
	  Fixes #374

2006-05-23  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/test/test_flavors.py:
	Fix, so the tests actually get run.
	* ChangeLog:
	Fix Thomas's lack of full-stop.

2006-05-23  Thomas Vander Stichele  <thomas at apestaart dot org>

	* doc/redhat/flumotion:
	* flumotion/service/main.py:
	  Make service script make sure that service.log is owned by
	  flumotion.  Fixes #372, and some other details.
