@@ -1,5 +1,10 @@
 2006-05-25  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
 
+	* flumotion/test/test_checkers.py:
+	Refactor to not give warnings on Twisted 2.2.
+
+2006-05-25  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
+
 	* flumotion/test/test_flavors.py:
 	Make check for twisted version smaller.
 	* flumotion/test/test_pb.py:
